--- a/css/classes.css
+++ b/css/classes.css
@@ -4,7 +4,7 @@
     padding: 4rem 0;
 }
 
-.filter-label {
+.filter-btn {
     padding: 10px 20px;
     background-color: var(--shadow-color);
     border: 2px solid var(--primary-color);
@@ -14,66 +14,31 @@
     border-radius: 5px;
 }
 
-.filter-label:hover {
-    background-color: #ff4d4d;
+.filter-btn:hover {
+    background-color: var(--primary-color);
     color: white;
+    font-weight: bold;
+    border-color: var(--primary-color);
+    transform: scale(1.05);
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 }
 
-
-.filter-input{
-    display: none;
-}
-
-
-.classes-gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    grid-auto-rows: 1px;
-    grid-gap: 1rem;
-    padding: 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.class-card {
-    display: none;
-    grid-row-end: span 25;
+.class-card-2 {
     transition: all 0.3s ease;
-    display: flex;
-    flex-direction: column;
-}
-
-.class-card:nth-child(3n+1) {
-    grid-row-end: span 25;
-}
-
-.class-card:nth-child(4n+2) {
-    grid-row-end: span 30;
-}
-
-.class-card:nth-child(5n+3) {
-    grid-row-end: span 24;
-}
-
-.class-card .card-img-top {
-    width: 100%;
-    height: 75%;
-}
-
-.class-card .card-body {
-    height: 25%;
+    background-color: var(--shadow-color);
     color: var(--text-color);
 }
 
-.class-card .card-title {
+.class-card-2 .card-title {
     margin-bottom: 0.5rem;
+    font-weight: bold;
 }
 
-.class-card .card-text {
+.class-card-2 .card-text {
     flex-grow: 1;
 }
 
-.class-card .card-overlay {
+.class-card-2 .card-overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -90,7 +55,7 @@
     z-index: 10;
 }
 
-.class-card .card-overlay.show {
+.class-card-2 .card-overlay.show {
     display: flex;
     opacity: 1;
 }
@@ -108,7 +73,7 @@
 }
 
 /* Estilos de Focus Visible para Tarjetas de Clases */
-.card.class-card:focus-visible {
+.card.class-card-2:focus-visible {
     transform: scale(1.02);
     z-index: 10;
     outline: 3px solid var(--primary-color);
@@ -117,7 +82,7 @@
     transition: all 0.3s ease;
 }
 
-.card.class-card:focus-visible .card-overlay {
+.card.class-card-2:focus-visible .card-overlay {
     display: flex;
     opacity: 1;
 }
